# loop-ai

./: .gitattributes  AI_CODING_LOOP_ARCHITECTURE.md  AI_CODING_LOOP_技术文档.md  README.md  package-lock.json  package.json  plugin.json  project-structure.md  pyproject.toml  run.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/: dev.md  direct.md  full.md  init.md  memory.md  plan.md  review.md  spec.md  test.md  verify.md
.codex-plugin/: plugin.json
.codex-plugin/skills/: dev.md  direct.md  full.md  init.md  memory.md  plan.md  review.md  spec.md  test.md  verify.md
.cursor-plugin/: plugin.json
.cursor-plugin/skills/: dev.md  direct.md  full.md  init.md  memory.md  plan.md  review.md  spec.md  test.md  verify.md
adapters/claude/: hooks.json  install.py  plugin.json
engines/: cli.py  run.bat  run.sh
engines/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py
engines/context/: __init__.py  models.py  router.py  sources.py  strategies.py
engines/guard/: __init__.py  code_quality.py  engine.py  models.py  quick_check.py  rollback.py  rules.py
engines/init/: __init__.py  generator.py  init_runner.py  models.py  scanner.py
engines/memory/: __init__.py  extractor.py  models.py  projection.py  store.py
engines/plan/: __init__.py  contracts.py  lock.py  models.py  quality_gate.py
engines/providers/: __init__.py  base.py  mcp_registry.py  mcp_registry.yaml  (+2 more)
hooks/: session-start  session-start-codex  session-start.py
skills/: direct.md  init.md  memory.md  spec.md  test.md  verify.md
(+65 files in other folders)
