[project]
name = "aicode-loop"
version = "0.1.0"
description = "AI Coding Loop - plugin-based AI coding workflow system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
